@@ -1,9 +1,9 @@
 /*
  *
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
- * 
+ *
  * Copyright 1997-2010 Sun Microsystems, Inc. All rights reserved.
- * 
+ *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
  * and Distribution License("CDDL") (collectively, the "License").  You
@@ -11,7 +11,7 @@
  * a copy of the License at https://jersey.dev.java.net/CDDL+GPL.html
  * or jersey/legal/LICENSE.txt.  See the License for the specific
  * language governing permissions and limitations under the License.
- * 
+ *
  * When distributing the software, include this License Header Notice in each
  * file and include the License file at jersey/legal/LICENSE.txt.
  * Sun designates this particular file as subject to the "Classpath" exception
@@ -20,9 +20,9 @@
  * Header, with the fields enclosed by brackets [] replaced by your own
  * identifying information: "Portions Copyrighted [year]
  * [name of copyright owner]"
- * 
+ *
  * Contributor(s):
- * 
+ *
  * If you wish your version of this file to be governed by only the CDDL or
  * only the GPL Version 2, indicate your decision by adding "[Contributor]
  * elects to include this software in this distribution under the [CDDL or GPL
@@ -35,17 +35,42 @@
  * holder.
  */
 
-package com.sun.jersey.spi.container;
+package com.sun.jersey.experimental.jrebel;
 
-/**
- * A listener that is registered with a {@link ContainerNotifier} to get
- * notified of container related events.
- * 
- * @author Paul.Sandoz@Sun.Com
- */
-public interface ContainerListener extends ReloadListener {
-    /**
-     * Called when reloading of the container is requested.
-     */
-    void onReload();
+import com.sun.jersey.api.core.ScanningResourceConfig;
+import com.sun.jersey.spi.container.ContainerListener;
+import com.sun.jersey.spi.container.ContainerNotifier;
+import org.zeroturnaround.javarebel.ClassEventListener;
+import org.zeroturnaround.javarebel.ReloaderFactory;
+
+import java.util.ArrayList;
+import java.util.List;
+
+public class Reloader implements ContainerNotifier, ClassEventListener {
+
+    private List<ContainerListener> list = new ArrayList<ContainerListener>();
+
+    private ScanningResourceConfig rc;
+
+    public void addListener(ContainerListener containerListener) {
+        list.add(containerListener);
+    }
+
+    public Reloader() {
+        ReloaderFactory.getInstance().addClassReloadListener(this);
+    }
+
+    public void setScanningResourceConfig(ScanningResourceConfig rc) {
+        this.rc = rc;
+    }
+
+    public void onClassEvent(int i, Class aClass) {
+        for(ContainerListener cl : list) {
+            cl.onReload();
+        }
+    }
+
+    public int priority() {
+        return ClassEventListener.PRIORITY_DEFAULT;
+    }
 }
