@@ -94,7 +94,8 @@ public class PackagesResourceConfig extends ScanningResourceConfig {
     /**
      * Perform a new search for resource classes and provider classes.
      */
-    public void reload() {
+    @Override
+    public void onReload() {
         getClasses().clear();
         init(packages);
     }
